20250620 퇴근시간까지

--- a/somang_documents/somang_documents/설계/데이터베이스모델링.md
+++ b/somang_documents/somang_documents/설계/데이터베이스모델링.md
@@ -11,6 +11,11 @@
 
 ---
 
+### 0. Extensions
+-- 지리 공간 쿼리 최적화를 위해 PostGIS 확장을 활성화합니다.
+CREATE EXTENSION IF NOT EXISTS postgis WITH SCHEMA extensions;
+
+
 ### 1. `profiles` Table
 
 애플리케이션 사용자의 역할 및 기본 정보를 관리합니다. Supabase의 `auth.users` 테이블과 연동됩니다.
@@ -21,7 +26,8 @@ CREATE TABLE public.profiles (
     id uuid NOT NULL PRIMARY KEY REFERENCES auth.users(id) ON DELETE CASCADE,
     role text NOT NULL CHECK (role IN ('user', 'owner', 'admin')),
     name text NOT NULL,
-    created_at timestamptz NOT NULL DEFAULT now()
+    created_at timestamptz NOT NULL DEFAULT now(),
+    deleted_at timestamptz
 );
 
 -- Comments
@@ -30,6 +36,7 @@ COMMENT ON COLUMN public.profiles.id IS 'User ID, references auth.users.id.';
 COMMENT ON COLUMN public.profiles.role IS 'User role: user, owner, or admin.';
 COMMENT ON COLUMN public.profiles.name IS 'User''s display name or nickname.';
 COMMENT ON COLUMN public.profiles.created_at IS 'Timestamp of when the profile was created.';
+COMMENT ON COLUMN public.profiles.deleted_at IS 'Timestamp for soft deletion. If not null, the user is considered deleted.';
 
 -- Enable Row Level Security
 ALTER TABLE public.profiles ENABLE ROW LEVEL SECURITY;
@@ -60,22 +67,26 @@ ALTER TABLE public.user_settings ENABLE ROW LEVEL SECURITY;
 -- Table: stores
 CREATE TABLE public.stores (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
-    owner_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
+    owner_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE RESTRICT,
     name text NOT NULL,
     description text,
     profile_image_url text,
     zip_code text,
     base_address text,
     detail_address text,
-    latitude numeric(10, 8),
-    longitude numeric(11, 8),
+    location geography(Point, 4326),
     status text NOT NULL DEFAULT 'pending' CHECK (status IN ('pending', 'approved', 'rejected', 'suspended')),
     is_certified boolean NOT NULL DEFAULT false,
     response_rate numeric(5, 2) DEFAULT 0.00,
     chat_room_count integer DEFAULT 0,
     accepted_quote_count integer DEFAULT 0,
-    created_at timestamptz NOT NULL DEFAULT now()
+    created_at timestamptz NOT NULL DEFAULT now(),
+    deleted_at timestamptz
 );
+
+-- Indexes
+-- 지리 공간 쿼리 성능 향상을 위한 GiST 인덱스 생성
+CREATE INDEX stores_location_idx ON public.stores USING gist (location);
 
 -- Comments
 COMMENT ON TABLE public.stores IS 'Represents telecom retail stores registered on the platform.';
@@ -84,17 +95,13 @@ COMMENT ON COLUMN public.stores.owner_id IS 'The profile ID of the business owne
 COMMENT ON COLUMN public.stores.name IS 'The name of the store.';
 COMMENT ON COLUMN public.stores.description IS 'A brief introduction to the store.';
 COMMENT ON COLUMN public.stores.profile_image_url IS 'URL for the store''s profile image.';
-COMMENT ON COLUMN public.stores.zip_code IS 'Zip code of the store address.';
-COMMENT ON COLUMN public.stores.base_address IS 'Base part of the store address.';
-COMMENT ON COLUMN public.stores.detail_address IS 'Detailed part of the store address.';
-COMMENT ON COLUMN public.stores.latitude IS 'Latitude of the store location.';
-COMMENT ON COLUMN public.stores.longitude IS 'Longitude of the store location.';
+COMMENT ON COLUMN public.stores.location IS 'PostGIS geography type for location data (SRID 4326). Use a GiST index for efficient spatial queries.';
 COMMENT ON COLUMN public.stores.status IS 'The current status of the store: pending, approved, rejected, suspended.';
 COMMENT ON COLUMN public.stores.is_certified IS 'Flag for ''T-Bridge Certified Holy Land''.';
-COMMENT ON COLUMN public.stores.response_rate IS 'Cache column for the store''s quote response rate.';
-COMMENT ON COLUMN public.stores.chat_room_count IS 'Cache column for the total number of chats.';
-COMMENT ON COLUMN public.stores.accepted_quote_count IS 'Cache column for the number of accepted quotes.';
-COMMENT ON COLUMN public.stores.created_at IS 'Timestamp of when the store was registered.';
+COMMENT ON COLUMN public.stores.response_rate IS 'Cache column for the store''s quote response rate. Maintained by database triggers.';
+COMMENT ON COLUMN public.stores.chat_room_count IS 'Cache column for the total number of chats. Maintained by database triggers.';
+COMMENT ON COLUMN public.stores.accepted_quote_count IS 'Cache column for the number of accepted quotes. Maintained by database triggers.';
+COMMENT ON COLUMN public.stores.deleted_at IS 'Timestamp for soft deletion.';
 
 -- Enable Row Level Security
 ALTER TABLE public.stores ENABLE ROW LEVEL SECURITY;
@@ -155,17 +162,14 @@ CREATE TABLE public.quote_requests (
     product_type text NOT NULL CHECK (product_type IN ('mobile_phone', 'internet')),
     request_details jsonb NOT NULL,
     status text NOT NULL DEFAULT 'open' CHECK (status IN ('open', 'closed', 'expired')),
-    created_at timestamptz NOT NULL DEFAULT now()
+    created_at timestamptz NOT NULL DEFAULT now(),
+    deleted_at timestamptz
 );
 
 -- Comments
 COMMENT ON TABLE public.quote_requests IS 'Stores quote requests submitted by users.';
-COMMENT ON COLUMN public.quote_requests.id IS 'Unique identifier for the quote request.';
-COMMENT ON COLUMN public.quote_requests.user_id IS 'The ID of the user who made the request.';
-COMMENT ON COLUMN public.quote_requests.product_type IS 'Type of product requested: mobile_phone or internet.';
-COMMENT ON COLUMN public.quote_requests.request_details IS 'JSON object containing request details (e.g., phone model, plan).';
-COMMENT ON COLUMN public.quote_requests.status IS 'The current status of the request: open, closed, or expired.';
-COMMENT ON COLUMN public.quote_requests.created_at IS 'Timestamp of when the request was created.';
+COMMENT ON COLUMN public.quote_requests.request_details IS 'JSON object containing request details. Schema should be documented, e.g., { "model": "iPhone 17", "carrier": "SKT", "plan": "5G Unlimited" }.';
+COMMENT ON COLUMN public.quote_requests.deleted_at IS 'Timestamp for soft deletion.';
 
 -- Enable Row Level Security
 ALTER TABLE public.quote_requests ENABLE ROW LEVEL SECURITY;
@@ -183,17 +187,14 @@ CREATE TABLE public.quotes (
     store_id uuid NOT NULL REFERENCES public.stores(id) ON DELETE CASCADE,
     quote_details jsonb NOT NULL,
     status text NOT NULL DEFAULT 'sent' CHECK (status IN ('sent', 'viewed', 'accepted', 'rejected')),
-    created_at timestamptz NOT NULL DEFAULT now()
+    created_at timestamptz NOT NULL DEFAULT now(),
+    deleted_at timestamptz
 );
 
 -- Comments
 COMMENT ON TABLE public.quotes IS 'Stores standardized quotes submitted by stores in response to requests.';
-COMMENT ON COLUMN public.quotes.id IS 'Unique identifier for the quote.';
-COMMENT ON COLUMN public.quotes.request_id IS 'The request this quote is for.';
-COMMENT ON COLUMN public.quotes.store_id IS 'The store that submitted this quote.';
-COMMENT ON COLUMN public.quotes.quote_details IS 'JSON object with standardized quote details (e.g., price, TCO).';
-COMMENT ON COLUMN public.quotes.status IS 'The status of the quote: sent, viewed, accepted, or rejected.';
-COMMENT ON COLUMN public.quotes.created_at IS 'Timestamp of when the quote was submitted.';
+COMMENT ON COLUMN public.quotes.quote_details IS 'JSON object with standardized quote details. Schema should be documented, e.g., { "devicePrice": 1500000, "subsidy": 500000, "storeSubsidy": 200000, "actualPrice": 800000, "monthlyFee": 89000 }.';
+COMMENT ON COLUMN public.quotes.deleted_at IS 'Timestamp for soft deletion.';
 
 -- Enable Row Level Security
 ALTER TABLE public.quotes ENABLE ROW LEVEL SECURITY;
@@ -207,25 +208,20 @@ ALTER TABLE public.quotes ENABLE ROW LEVEL SECURITY;
 -- Table: reviews
 CREATE TABLE public.reviews (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
-    store_id uuid NOT NULL REFERENCES public.stores(id) ON DELETE CASCADE,
-    user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
-    quote_id uuid NOT NULL UNIQUE REFERENCES public.quotes(id) ON DELETE CASCADE,
+    store_id uuid NOT NULL REFERENCES public.stores(id) ON DELETE SET NULL,
+    user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE SET NULL,
+    quote_id uuid NOT NULL UNIQUE REFERENCES public.quotes(id) ON DELETE RESTRICT,
     rating smallint NOT NULL CHECK (rating >= 1 AND rating <= 5),
     comment text,
     is_hidden boolean NOT NULL DEFAULT false,
-    created_at timestamptz NOT NULL DEFAULT now()
+    created_at timestamptz NOT NULL DEFAULT now(),
+    deleted_at timestamptz
 );
 
 -- Comments
 COMMENT ON TABLE public.reviews IS 'Stores reviews and ratings submitted by users after a transaction.';
-COMMENT ON COLUMN public.reviews.id IS 'Unique identifier for the review.';
-COMMENT ON COLUMN public.reviews.store_id IS 'The ID of the store being reviewed.';
-COMMENT ON COLUMN public.reviews.user_id IS 'The ID of the user who wrote the review.';
 COMMENT ON COLUMN public.reviews.quote_id IS 'The transaction (quote) this review is for. Ensures one review per transaction.';
-COMMENT ON COLUMN public.reviews.rating IS 'Star rating from 1 to 5.';
-COMMENT ON COLUMN public.reviews.comment IS 'The text content of the review.';
-COMMENT ON COLUMN public.reviews.is_hidden IS 'Flag to hide the review from public view by an admin.';
-COMMENT ON COLUMN public.reviews.created_at IS 'Timestamp of when the review was submitted.';
+COMMENT ON COLUMN public.reviews.deleted_at IS 'Timestamp for soft deletion.';
 
 -- Enable Row Level Security
 ALTER TABLE public.reviews ENABLE ROW LEVEL SECURITY;
@@ -267,7 +263,7 @@ COMMENT ON TABLE public.favorites IS 'Stores user''s bookmarked items like store
 ALTER TABLE public.favorites ENABLE ROW LEVEL SECURITY;
 ```
 
-### 11. `chat_rooms`  Tables
+### 11. `chat_rooms` & `chat_messages` Tables
 
 소비자와 판매점 간의 1:1 보안 채팅 기능을 구현합니다.
 
@@ -282,23 +278,9 @@ CREATE TABLE public.chat_rooms (
     CONSTRAINT unique_chat_per_context UNIQUE (user_id, store_id, quote_id)
 );
 
--- Comments
 COMMENT ON TABLE public.chat_rooms IS 'Represents a private chat room between a user and a store.';
-COMMENT ON COLUMN public.chat_rooms.id IS 'Unique identifier for the chat room.';
-COMMENT ON COLUMN public.chat_rooms.user_id IS 'The user participating in the chat.';
-COMMENT ON COLUMN public.chat_rooms.store_id IS 'The store participating in the chat.';
-COMMENT ON COLUMN public.chat_rooms.quote_id IS 'The quote that initiated this chat, if any.';
-COMMENT ON COLUMN public.chat_rooms.created_at IS 'Timestamp of when the chat room was created.';
-
--- Enable Row Level Security
 ALTER TABLE public.chat_rooms ENABLE ROW LEVEL SECURITY;
-```
 
-### 12. `chat_messages` Tables
-
-소비자와 판매점 간의 1:1 보안 채팅 기능을 구현합니다.
-
-```SQL
 -- Table: chat_messages
 CREATE TABLE public.chat_messages (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -310,21 +292,11 @@ CREATE TABLE public.chat_messages (
     created_at timestamptz NOT NULL DEFAULT now()
 );
 
--- Comments
 COMMENT ON TABLE public.chat_messages IS 'Stores all messages sent within chat rooms.';
-COMMENT ON COLUMN public.chat_messages.id IS 'Unique identifier for the message.';
-COMMENT ON COLUMN public.chat_messages.room_id IS 'The room this message belongs to.';
-COMMENT ON COLUMN public.chat_messages.sender_id IS 'The profile ID of the message sender.';
-COMMENT ON COLUMN public.chat_messages.content IS 'The text content of the message.';
-COMMENT ON COLUMN public.chat_messages.message_type IS 'Type of the message: text or image.';
-COMMENT ON COLUMN public.chat_messages.attachment_url IS 'URL of the attachment if message_type is not text.';
-COMMENT ON COLUMN public.chat_messages.created_at IS 'Timestamp of when the message was sent.';
-
--- Enable Row Level Security
 ALTER TABLE public.chat_messages ENABLE ROW LEVEL SECURITY;
 ```
 
-### 13. `notices` Table
+### 12. `notices` Table
 
 플랫폼 전체 공지사항을 관리합니다.
 
@@ -342,7 +314,7 @@ COMMENT ON TABLE public.notices IS 'Stores platform-wide announcements for users
 ALTER TABLE public.notices ENABLE ROW LEVEL SECURITY;
 ```
 
-### 14. `policies`  Tables
+### 13. `policies` & `policy_consents` Tables
 
 버전이 관리되는 서비스 약관과 사용자 동의 이력을 관리합니다.
 
@@ -359,13 +331,7 @@ CREATE TABLE public.policies (
 
 COMMENT ON TABLE public.policies IS 'Stores versioned legal documents like ToS and Privacy Policy.';
 ALTER TABLE public.policies ENABLE ROW LEVEL SECURITY;
-```
 
-### 15. `policy_consents` Tables
-
-버전이 관리되는 서비스 약관과 사용자 동의 이력을 관리합니다.
-
-```SQL
 CREATE TABLE public.policy_consents (
     id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
     user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
@@ -378,7 +344,7 @@ COMMENT ON TABLE public.policy_consents IS 'Tracks user consent to specific poli
 ALTER TABLE public.policy_consents ENABLE ROW LEVEL SECURITY;
 ```
 
-### 16. `support_tickets`  Tables
+### 14. `support_tickets` & `ticket_replies` Tables
 
 고객 지원 문의 및 답변을 관리합니다.
 
@@ -394,13 +360,7 @@ CREATE TABLE public.support_tickets (
 
 COMMENT ON TABLE public.support_tickets IS 'Stores customer support inquiries.';
 ALTER TABLE public.support_tickets ENABLE ROW LEVEL SECURITY;
-```
 
-### 17. `ticket_replies` Tables
-
-고객 지원 문의 및 답변을 관리합니다.
-
-```SQL
 CREATE TABLE public.ticket_replies (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
     ticket_id uuid NOT NULL REFERENCES public.support_tickets(id) ON DELETE CASCADE,
@@ -411,4 +371,29 @@ CREATE TABLE public.ticket_replies (
 
 COMMENT ON TABLE public.ticket_replies IS 'Stores replies for support tickets.';
 ALTER TABLE public.ticket_replies ENABLE ROW LEVEL SECURITY;
+```
+
+### 15. `audit_logs` Table (New)
+
+플랫폼의 주요 변경 이력을 기록하는 감사 로그 테이블입니다.
+
+```SQL
+CREATE TABLE public.audit_logs (
+    id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
+    actor_id uuid REFERENCES public.profiles(id) ON DELETE SET NULL,
+    action_type text NOT NULL,
+    target_id uuid,
+    old_value jsonb,
+    new_value jsonb,
+    created_at timestamptz NOT NULL DEFAULT now()
+);
+
+COMMENT ON TABLE public.audit_logs IS 'Stores audit trails for significant actions within the platform.';
+COMMENT ON COLUMN public.audit_logs.actor_id IS 'The ID of the user or admin who performed the action.';
+COMMENT ON COLUMN public.audit_logs.action_type IS 'The type of action performed (e.g., ''STORE_APPROVED'', ''USER_SUSPENDED'').';
+COMMENT ON COLUMN public.audit_logs.target_id IS 'The ID of the resource that was affected.';
+COMMENT ON COLUMN public.audit_logs.old_value IS 'The state of the data before the change.';
+COMMENT ON COLUMN public.audit_logs.new_value IS 'The state of the data after the change.';
+
+ALTER TABLE public.audit_logs ENABLE ROW LEVEL SECURITY;
 ```
