--- a/somang_documents/somang_documents/설계/테이블명세.md
+++ b/somang_documents/somang_documents/설계/테이블명세.md
@@ -13,6 +13,7 @@
 | `role`       | 역할     | `text`        | NOT NULL, CHECK           | 사용자의 역할 ('user', 'owner', 'admin' 중 하나).                                    |
 | `name`       | 이름/닉네임 | `text`        | NOT NULL                  | 사용자가 앱 내에서 사용할 표시 이름 또는 닉네임.                                                |
 | `created_at` | 생성일시   | `timestamptz` | NOT NULL, DEFAULT `now()` | 프로필 레코드가 생성된 시각.                                                            |
+| `deleted_at`   | 삭제일시   | `timestamptz` |                           | 프로필이 소프트 삭제된 시각. `null`이 아니면 삭제된 계정으로 간주합니다.                             |
 
 ### 2. user_settings
 - **테이블 설명**: 사용자별 알림 등 개인화된 설정을 관리합니다.
@@ -27,24 +28,24 @@
 ### 3. stores
 - **테이블 설명**: 플랫폼에 입점한 통신 판매점(가맹점)의 상세 정보를 관리합니다.
 
-| 컬럼 영문명                 | 컬럼 한글명    | 데이터 타입         | 제약 조건                           | 설명                                                            |
-| :--------------------- | :-------- | :------------- | :------------------------------ | :------------------------------------------------------------ |
-| `id`                   | 판매점 ID    | `uuid`         | PK, DEFAULT `gen_random_uuid()` | 판매점의 고유 식별자.                                                  |
-| `owner_id`             | 소유주 ID    | `uuid`         | NOT NULL, FK (profiles.id)      | 판매점주의 프로필 ID. `profiles` 테이블을 참조하며, 소유주 프로필 삭제 시 연쇄적으로 삭제됩니다. |
-| `name`                 | 판매점명      | `text`         | NOT NULL                        | 판매점의 공식 상호명.                                                  |
-| `zip_code`             | 우편번호      | `text`         |                                 | 판매점 주소의 우편번호.                                               |
-| `base_address`         | 기본주소      | `text`         |                                 | 판매점 주소의 기본 부분 (예: 도로명 주소).                                |
-| `detail_address`       | 상세주소      | `text`         |                                 | 판매점 주소의 상세 부분 (예: 층, 호수).                                   |
-| `latitude`             | 위도        | `numeric(10,8)`|                                 | 주소의 위도 좌표. 지도 서비스에 사용됩니다.                                   |
-| `longitude`            | 경도        | `numeric(11,8)`|                                 | 주소의 경도 좌표. 지도 서비스에 사용됩니다.                                   |
-| `description`          | 소개        | `text`         |                                 | 판매점에 대한 간략한 소개글.                                              |
-| `profile_image_url`    | 프로필이미지URL | `text`         |                                 | 판매점 대표 이미지의 URL. Supabase Storage에 저장된 파일 경로.                 |
-| `status`               | 상태        | `text`         | NOT NULL, DEFAULT `'pending'`   | 판매점의 현재 상태 ('pending', 'approved', 'rejected', 'suspended' 중 하나). |
-| `is_certified`         | 인증여부      | `boolean`      | NOT NULL, DEFAULT `false`       | 'T-Bridge 인증 성지' 여부를 나타내는 플래그.                                |
-| `response_rate`        | 응답률       | `numeric(5,2)` | DEFAULT `0.00`                  | (캐시) 견적 응답률. 성능 최적화를 위해 주기적으로 계산하여 저장합니다.                     |
-| `chat_room_count`      | 상담건수      | `integer`      | DEFAULT `0`                     | (캐시) 총 상담 건수.                                                 |
-| `accepted_quote_count` | 개통건수      | `integer`      | DEFAULT `0`                     | (캐시) 총 개통(채택) 건수.                                             |
-| `created_at`           | 등록일시      | `timestamptz`  | NOT NULL, DEFAULT `now()`       | 판매점 정보가 시스템에 등록된 시각.                                          |
+| 컬럼 영문명                 | 컬럼 한글명    | 데이터 타입                 | 제약 조건                           | 설명                                                            |
+| :--------------------- | :-------- | :------------------------- | :------------------------------ | :------------------------------------------------------------ |
+| `id`                   | 판매점 ID    | `uuid`                     | PK, DEFAULT `gen_random_uuid()` | 판매점의 고유 식별자.                                                  |
+| `owner_id`             | 소유주 ID    | `uuid`                     | NOT NULL, FK (profiles.id)      | 판매점주의 프로필 ID. `profiles` 테이블을 참조하며, 소유주 프로필 삭제 시 제한(RESTRICT)됩니다. |
+| `name`                 | 판매점명      | `text`                     | NOT NULL                        | 판매점의 공식 상호명.                                                  |
+| `zip_code`             | 우편번호      | `text`                     |                                 | 판매점 주소의 우편번호.                                               |
+| `base_address`         | 기본주소      | `text`                     |                                 | 판매점 주소의 기본 부분 (예: 도로명 주소).                                |
+| `detail_address`       | 상세주소      | `text`                     |                                 | 판매점 주소의 상세 부분 (예: 층, 호수).                                   |
+| `location`             | 위치정보      | `geography(Point, 4326)`   |                                 | (변경) PostGIS의 geography 타입. 위치 기반 검색 성능 향상을 위해 GiST 인덱스를 사용합니다. |
+| `description`          | 소개        | `text`                     |                                 | 판매점에 대한 간략한 소개글.                                              |
+| `profile_image_url`    | 프로필이미지URL | `text`                     |                                 | 판매점 대표 이미지의 URL. Supabase Storage에 저장된 파일 경로.                 |
+| `status`               | 상태        | `text`                     | NOT NULL, DEFAULT `'pending'`   | 판매점의 현재 상태 ('pending', 'approved', 'rejected', 'suspended' 중 하나). |
+| `is_certified`         | 인증여부      | `boolean`                  | NOT NULL, DEFAULT `false`       | 'T-Bridge 인증 성지' 여부를 나타내는 플래그.                                |
+| `response_rate`        | 응답률       | `numeric(5,2)`             | DEFAULT `0.00`                  | (캐시) 견적 응답률. DB 트리거를 통해 자동으로 계산하여 저장합니다.                     |
+| `chat_room_count`      | 상담건수      | `integer`                  | DEFAULT `0`                     | (캐시) 총 상담 건수. DB 트리거를 통해 자동으로 계산하여 저장합니다.             |
+| `accepted_quote_count` | 개통건수      | `integer`                  | DEFAULT `0`                     | (캐시) 총 개통(채택) 건수. DB 트리거를 통해 자동으로 계산하여 저장합니다.         |
+| `created_at`           | 등록일시      | `timestamptz`              | NOT NULL, DEFAULT `now()`       | 판매점 정보가 시스템에 등록된 시각.                                          |
+| `deleted_at`           | 삭제일시      | `timestamptz`              |                                 | 판매점 정보가 소프트 삭제된 시각.                                         |
 
 ### 4. store_verification_documents
 - **테이블 설명**: 판매점이 제출하는 인증 서류 정보를 관리합니다.
@@ -82,9 +83,10 @@
 | `id`              | 요청 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()`   | 견적 요청의 고유 식별자.                                   |
 | `user_id`         | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)        | 견적을 요청한 사용자의 ID.                                 |
 | `product_type`    | 상품유형   | `text`        | NOT NULL, CHECK                   | 요청 상품의 유형 ('mobile_phone' 또는 'internet').        |
-| `request_details` | 요청상세   | `jsonb`       | NOT NULL                          | 요청에 대한 상세 내용을 담는 JSON 객체 (예: 원하는 단말기 모델, 요금제 등). |
+| `request_details` | 요청상세   | `jsonb`       | NOT NULL                          | (스키마 정의 필요) 요청 상세 내용을 담는 JSON 객체 (예: { "model": "iPhone 17" }). |
 | `status`          | 상태     | `text`        | NOT NULL, DEFAULT `'open'`, CHECK | 요청의 현재 상태 ('open', 'closed', 'expired' 중 하나).    |
 | `created_at`      | 요청일시   | `timestamptz` | NOT NULL, DEFAULT `now()`         | 견적 요청이 생성된 시각.                                   |
+| `deleted_at`      | 삭제일시   | `timestamptz` |                                   | 견적 요청이 소프트 삭제된 시각.                              |
 
 ### 7. quotes
 - **테이블 설명**: 판매점이 소비자의 요청에 대해 제출하는 표준화된 견적서 정보를 관리합니다.
@@ -94,28 +96,28 @@
 | `id`            | 견적 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()`   | 견적서의 고유 식별자.                                                |
 | `request_id`    | 요청 ID  | `uuid`        | NOT NULL, FK (quote_requests.id)  | 이 견적서가 응답하는 대상 견적 요청의 ID.                                   |
 | `store_id`      | 판매점 ID | `uuid`        | NOT NULL, FK (stores.id)          | 견적서를 제출한 판매점의 ID.                                           |
-| `quote_details` | 견적상세   | `jsonb`       | NOT NULL                          | 표준화된 견적 상세 정보를 담는 JSON 객체 (예: 출고가, 지원금, 월요금, TCO 등).        |
+| `quote_details` | 견적상세   | `jsonb`       | NOT NULL                          | (스키마 정의 필요) 표준 견적 상세 정보를 담는 JSON 객체 (예: { "tco": 2100000 }). |
 | `status`        | 상태     | `text`        | NOT NULL, DEFAULT `'sent'`, CHECK | 견적서의 현재 상태 ('sent', 'viewed', 'accepted', 'rejected' 중 하나). |
 | `created_at`    | 제출일시   | `timestamptz` | NOT NULL, DEFAULT `now()`         | 견적서가 제출된 시각.                                                |
+| `deleted_at`    | 삭제일시   | `timestamptz` |                                   | 견적서가 소프트 삭제된 시각.                                           |
 
 ### 8. reviews
 - **테이블 설명**: 실제 거래를 완료한 소비자가 판매점에 대해 작성한 후기와 별점을 관리합니다.
-- 기타 설명: 하나의 거래(견적)에 대해 오직 하나의 리뷰만 작성 가능
 
 | 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                            | 설명                                                    |
 | :----------- | :----- | :------------ | :------------------------------- | :---------------------------------------------------- |
 | `id`         | 리뷰 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()`  | 리뷰의 고유 식별자.                                           |
 | `store_id`   | 판매점 ID | `uuid`        | NOT NULL, FK (stores.id)         | 리뷰의 대상이 되는 판매점의 ID.                                   |
 | `user_id`    | 사용자 ID | `uuid`        | NOT NULL, FK (profiles.id)       | 리뷰를 작성한 사용자의 ID.                                      |
-| `quote_id`   | 견적 ID  | `uuid`        | NOT NULL, UNIQUE, FK (quotes.id) | 리뷰의 근거가 된 거래(견적) ID. 거래 건당 하나의 리뷰만 허용하기 위해 UNIQUE 제약. |
+| `quote_id`   | 견적 ID  | `uuid`        | NOT NULL, UNIQUE, FK (quotes.id) | 리뷰의 근거가 된 거래(견적) ID. 거래 건당 하나의 리뷰만 허용합니다. |
 | `rating`     | 별점     | `smallint`    | NOT NULL, CHECK                  | 1부터 5까지의 정수형 별점.                                      |
 | `comment`    | 리뷰내용   | `text`        |                                  | 소비자가 작성한 텍스트 형식의 리뷰.                                  |
 | `is_hidden`  | 숨김여부   | `boolean`     | NOT NULL, DEFAULT `false`        | 관리자에 의해 부적절한 리뷰가 숨김 처리되었는지 여부.                     |
 | `created_at` | 작성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`        | 리뷰가 작성된 시각.                                           |
+| `deleted_at` | 삭제일시   | `timestamptz` |                                  | 리뷰가 소프트 삭제된 시각.                                      |
 
 ### 9. review_votes
 - **테이블 설명**: 리뷰에 대한 사용자의 '좋아요/싫어요' 반응을 기록합니다.
-- 기타 설명: 한 사용자는 하나의 리뷰에 대해 한 번만 투표할 수 있음
 
 | 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                           |
 | :----------- | :----- | :------------ | :------------------------------ | :--------------------------- |
@@ -138,7 +140,6 @@
 
 ### 11. chat_rooms
 - **테이블 설명**: 소비자와 판매점 간의 1:1 보안 채팅방 정보를 관리합니다.
-- 기타 설명: 동일한 사용자, 판매점, 견적 조합으로 중복된 채팅방이 생성되지 않음.
 
 | 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명                            |
 | :----------- | :----- | :------------ | :------------------------------ | :---------------------------- |
@@ -187,7 +188,6 @@
 
 ### 15. policy_consents
 - **테이블 설명**: 사용자가 어떤 버전의 약관에 언제 동의했는지 이력을 관리합니다.
-- 기타 설명: 한 사용자가 특정 버전의 약관에 대해 중복으로 동의하는 것을 방지.
 
 | 컬럼 영문명         | 컬럼 한글명 | 데이터 타입        | 제약 조건                           | 설명               |
 | :------------- | :----- | :------------ | :------------------------------ | :--------------- |
@@ -218,3 +218,16 @@
 | `replier_id` | 답변자 ID | `uuid`        | NOT NULL, FK (profiles.id)      | 답변을 작성한 사용자(또는 관리자)의 ID.        |
 | `content`    | 답변내용   | `text`        | NOT NULL                        | 답변의 상세 내용.                        |
 | `created_at` | 작성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 답변이 작성된 시각.                      |
+
+### 18. audit_logs (신규 추가)
+- **테이블 설명**: 플랫폼의 주요 변경 이력을 기록하는 감사 로그 테이블입니다.
+
+| 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                      | 설명                                         |
+| :----------- | :----- | :------------ | :----------------------------- | :----------------------------------------- |
+| `id`         | 로그 ID  | `uuid`        | PK, DEFAULT `gen_random_uuid()`| 로그 레코드의 고유 식별자.                         |
+| `actor_id`   | 행위자 ID | `uuid`        | FK (profiles.id)               | 작업을 수행한 주체(사용자/관리자)의 ID.              |
+| `action_type`| 작업 유형  | `text`        | NOT NULL                       | 수행된 작업의 종류 (예: 'STORE_APPROVED').           |
+| `target_id`  | 대상 ID  | `uuid`        |                                | 작업의 대상이 된 리소스의 ID (예: store_id).         |
+| `old_value`  | 변경 전 값 | `jsonb`       |                                | 변경 전 데이터 상태 (필요시).                      |
+| `new_value`  | 변경 후 값 | `jsonb`       |                                | 변경 후 데이터 상태 (필요시).                      |
+| `created_at` | 발생일시   | `timestamptz` | NOT NULL, DEFAULT `now()`      | 작업이 수행된 시각.                              |
