휴대폰, 인터네TV 추가
데이터베이스 모델링
테이블 명세
데이터베이스 ERD
인증 및 보안설계
FE-ADM-040, FE-ADM-050 (추가)
전체기능목록

--- a/somang_documents/somang_documents/설계/데이터베이스모델링.md
+++ b/somang_documents/somang_documents/설계/데이터베이스모델링.md
@@ -107,7 +107,7 @@ COMMENT ON COLUMN public.stores.deleted_at IS 'Timestamp for soft deletion.';
 ALTER TABLE public.stores ENABLE ROW LEVEL SECURITY;
 ```
 
-### 4. `store_verification_documents` Table (New)
+### 4. `store_verification_documents` Table
 
 판매점 인증 서류를 관리합니다.
 
@@ -263,7 +263,7 @@ COMMENT ON TABLE public.favorites IS 'Stores user''s bookmarked items like store
 ALTER TABLE public.favorites ENABLE ROW LEVEL SECURITY;
 ```
 
-### 11. `chat_rooms` & `chat_messages` Tables
+### 11. `chat_rooms` Tables
 
 소비자와 판매점 간의 1:1 보안 채팅 기능을 구현합니다.
 
@@ -280,7 +280,13 @@ CREATE TABLE public.chat_rooms (
 
 COMMENT ON TABLE public.chat_rooms IS 'Represents a private chat room between a user and a store.';
 ALTER TABLE public.chat_rooms ENABLE ROW LEVEL SECURITY;
+```
 
+### 12. `chat_messages` Tables
+
+소비자와 판매점 간의 1:1 보안 채팅 기능을 구현합니다.
+
+```SQL
 -- Table: chat_messages
 CREATE TABLE public.chat_messages (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
@@ -296,7 +302,7 @@ COMMENT ON TABLE public.chat_messages IS 'Stores all messages sent within chat r
 ALTER TABLE public.chat_messages ENABLE ROW LEVEL SECURITY;
 ```
 
-### 12. `notices` Table
+### 13. `notices` Table
 
 플랫폼 전체 공지사항을 관리합니다.
 
@@ -314,7 +320,7 @@ COMMENT ON TABLE public.notices IS 'Stores platform-wide announcements for users
 ALTER TABLE public.notices ENABLE ROW LEVEL SECURITY;
 ```
 
-### 13. `policies` & `policy_consents` Tables
+### 14. `policies` Tables
 
 버전이 관리되는 서비스 약관과 사용자 동의 이력을 관리합니다.
 
@@ -331,7 +337,13 @@ CREATE TABLE public.policies (
 
 COMMENT ON TABLE public.policies IS 'Stores versioned legal documents like ToS and Privacy Policy.';
 ALTER TABLE public.policies ENABLE ROW LEVEL SECURITY;
+```
 
+### 15. `policy_consents` Tables
+
+버전이 관리되는 서비스 약관과 사용자 동의 이력을 관리합니다.
+
+```SQL
 CREATE TABLE public.policy_consents (
     id uuid PRIMARY KEY DEFAULT gen_random_uuid(),
     user_id uuid NOT NULL REFERENCES public.profiles(id) ON DELETE CASCADE,
@@ -344,7 +356,7 @@ COMMENT ON TABLE public.policy_consents IS 'Tracks user consent to specific poli
 ALTER TABLE public.policy_consents ENABLE ROW LEVEL SECURITY;
 ```
 
-### 14. `support_tickets` & `ticket_replies` Tables
+### 16. `support_tickets` Tables
 
 고객 지원 문의 및 답변을 관리합니다.
 
@@ -360,7 +372,13 @@ CREATE TABLE public.support_tickets (
 
 COMMENT ON TABLE public.support_tickets IS 'Stores customer support inquiries.';
 ALTER TABLE public.support_tickets ENABLE ROW LEVEL SECURITY;
+```
 
+### 17. `ticket_replies` Tables
+
+고객 지원 문의 및 답변을 관리합니다.
+
+```SQL
 CREATE TABLE public.ticket_replies (
     id uuid NOT NULL PRIMARY KEY DEFAULT gen_random_uuid(),
     ticket_id uuid NOT NULL REFERENCES public.support_tickets(id) ON DELETE CASCADE,
@@ -373,7 +391,7 @@ COMMENT ON TABLE public.ticket_replies IS 'Stores replies for support tickets.';
 ALTER TABLE public.ticket_replies ENABLE ROW LEVEL SECURITY;
 ```
 
-### 15. `audit_logs` Table (New)
+### 18. `audit_logs` Table (New)
 
 플랫폼의 주요 변경 이력을 기록하는 감사 로그 테이블입니다.
 
@@ -396,4 +414,125 @@ COMMENT ON COLUMN public.audit_logs.old_value IS 'The state of the data before t
 COMMENT ON COLUMN public.audit_logs.new_value IS 'The state of the data after the change.';
 
 ALTER TABLE public.audit_logs ENABLE ROW LEVEL SECURITY;
+```
+### 19. `devices` Table
+
+시스템에서 사용되는 휴대폰 단말기의 기준 정보를 저장합니다. (예: 제조사, 모델명, 출시일, 색상, 저장용량 등)
+
+```SQL
+CREATE TABLE public.devices (
+    id uuid NOT NULL DEFAULT gen_random_uuid(),
+    -- 기본 정보
+    manufacturer text NOT NULL,
+    device_name text NOT NULL,
+    device_code text NOT NULL,
+    release_date date NULL,
+    colors text[] NULL, 
+    storage_options integer[] NULL,
+    description text NULL,
+    
+    -- 상세 제원
+    ram_gb integer NULL, 
+    battery_mah integer NULL, 
+    screen_size_inch numeric(3, 1) NULL,
+    display_spec text NULL,
+    cpu_spec text NULL,
+    camera_spec text NULL,
+    external_memory_support text NULL,
+
+    -- 부가 기능
+    mobile_payment text NULL, 
+    water_dust_resistance text NULL, 
+    fingerprint_sensor text NULL, 
+    wireless_charging_supported boolean NULL,
+    factory_film_attached boolean NULL,
+
+    -- 메타데이터
+    created_at timestamptz NOT NULL DEFAULT now(),
+    updated_at timestamptz NOT NULL DEFAULT now(),
+    deleted_at timestamptz NULL,
+    
+    CONSTRAINT devices_pkey PRIMARY KEY (id),
+    CONSTRAINT devices_device_code_key UNIQUE (device_code)
+);
+
+COMMENT ON TABLE public.devices IS '휴대폰 단말기 기준 정보';
+COMMENT ON COLUMN public.devices.manufacturer IS '제조사 (예: Samsung, Apple)';
+COMMENT ON COLUMN public.devices.device_name IS '기기명 (예: Galaxy S24 Ultra)';
+COMMENT ON COLUMN public.devices.device_code IS '기기 코드 (예: SM-S928N)';
+COMMENT ON COLUMN public.devices.release_date IS '출시일';
+COMMENT ON COLUMN public.devices.colors IS '지원 색상 이름 목록 (배열)';
+COMMENT ON COLUMN public.devices.storage_options IS '지원 내장메모리(GB) 목록 (정수 배열)';
+COMMENT ON COLUMN public.devices.description IS '단말기에 대한 추가적인 설명';
+COMMENT ON COLUMN public.devices.ram_gb IS 'RAM 용량 (GB)';
+COMMENT ON COLUMN public.devices.battery_mah IS '배터리 용량 (mAh)';
+COMMENT ON COLUMN public.devices.screen_size_inch IS '화면 크기 (인치)';
+COMMENT ON COLUMN public.devices.display_spec IS '디스플레이 상세 사양';
+COMMENT ON COLUMN public.devices.cpu_spec IS 'CPU 상세 사양';
+COMMENT ON COLUMN public.devices.camera_spec IS '카메라 상세 사양';
+COMMENT ON COLUMN public.devices.external_memory_support IS '외장메모리 지원 정보 (예: MicroSD, 미지원)';
+COMMENT ON COLUMN public.devices.mobile_payment IS '간편결제 지원 정보 (예: Samsung Pay, Apple Pay)';
+COMMENT ON COLUMN public.devices.water_dust_resistance IS '방수방진 등급 (예: IP68)';
+COMMENT ON COLUMN public.devices.fingerprint_sensor IS '지문인식 기술 정보 (예: 온스크린 초음파)';
+COMMENT ON COLUMN public.devices.wireless_charging_supported IS '무선충전 지원 여부';
+COMMENT ON COLUMN public.devices.factory_film_attached IS '공장 출고 시 보호필름 부착 여부';
+
+
+-- updated_at 자동 갱신을 위한 공용 트리거 함수
+CREATE OR REPLACE FUNCTION update_updated_at_column()
+RETURNS TRIGGER AS $$
+BEGIN
+    NEW.updated_at = now();
+    RETURN NEW;
+END;
+$$ language 'plpgsql';
+
+-- devices 테이블에 트리거 적용
+CREATE TRIGGER handle_devices_updated_at BEFORE UPDATE ON public.devices
+  FOR EACH ROW EXECUTE PROCEDURE update_updated_at_column();
+```
+
+### 20. `internet_products` Table (신규)
+
+관리자가 등록하는 인터넷/TV 결합 상품의 기준 정보를 저장합니다.
+
+```SQL
+CREATE TABLE public.internet_products (
+    id uuid NOT NULL DEFAULT gen_random_uuid(),
+    product_name text NOT NULL,
+    carrier text NOT NULL, -- 통신사
+    product_type text NOT NULL CHECK (product_type IN ('internet_only', 'internet_tv')),
+    internet_speed_mbps integer NOT NULL,
+    tv_channel_count integer,
+    regular_price integer NOT NULL, -- 정가
+    discounted_price integer NOT NULL, -- 할인가
+    contract_period_months integer NOT NULL, -- 약정 개월
+    installation_fee_weekday integer NOT NULL, -- 주중 설치비
+    installation_fee_weekend integer NOT NULL, -- 주말 설치비
+    description text,
+    
+    -- 메타데이터
+    created_at timestamptz NOT NULL DEFAULT now(),
+    updated_at timestamptz NOT NULL DEFAULT now(),
+    deleted_at timestamptz NULL,
+
+    CONSTRAINT internet_products_pkey PRIMARY KEY (id)
+);
+
+COMMENT ON TABLE public.internet_products IS '인터넷/TV 상품 기준 정보';
+COMMENT ON COLUMN public.internet_products.product_name IS '상품명 (예: KT 스페셜 500M + TV 베이직)';
+COMMENT ON COLUMN public.internet_products.carrier IS '통신사 (예: KT, SK, LGU+)';
+COMMENT ON COLUMN public.internet_products.product_type IS '상품 구성 (인터넷 단독, 인터넷+TV)';
+COMMENT ON COLUMN public.internet_products.internet_speed_mbps IS '인터넷 속도 (Mbps)';
+COMMENT ON COLUMN public.internet_products.tv_channel_count IS 'TV 채널 수 (상품 구성이 internet_tv일 경우)';
+COMMENT ON COLUMN public.internet_products.regular_price IS '월 정가 (원)';
+COMMENT ON COLUMN public.internet_products.discounted_price IS '월 할인가 (원)';
+COMMENT ON COLUMN public.internet_products.contract_period_months IS '의무 약정 기간 (개월)';
+COMMENT ON COLUMN public.internet_products.installation_fee_weekday IS '주중 설치비 (원)';
+COMMENT ON COLUMN public.internet_products.installation_fee_weekend IS '주말 설치비 (원)';
+COMMENT ON COLUMN public.internet_products.description IS '상품에 대한 추가 설명';
+
+-- internet_products 테이블에 updated_at 트리거 적용
+CREATE TRIGGER handle_internet_products_updated_at BEFORE UPDATE ON public.internet_products
+  FOR EACH ROW EXECUTE PROCEDURE update_updated_at_column();
 ```
