--- a/somang_documents/somang_documents/기능/전체기능목록.md
+++ b/somang_documents/somang_documents/기능/전체기능목록.md
@@ -60,3 +60,13 @@
         -   TSK-ADM-030-001: 사용자에게 보여줄 공지사항 등록 및 관리
         -   TSK-ADM-030-002: 서비스 이용약관 및 개인정보처리방침 수정 및 버전 관리
         -   TSK-ADM-030-003: 'T-Bridge 인증 성지' 판매점 지정 및 관리
+    -   **FE-ADM-040: 단말기 정보 관리 (Device Information Management)**
+        -   TSK-ADM-040-001: 시스템에서 사용될 단말기 기준 정보 생성 (Create)
+        -   TSK-ADM-040-002: 등록된 단말기 정보 목록 조회 및 검색 (Read)
+        -   TSK-ADM-040-003: 기존 단말기 정보 수정 (Update)
+        -   TSK-ADM-040-004: 단말기 정보 삭제 (Delete)
+    -   **FE-ADM-050: 인터넷 상품 관리 (Internet Product Management)** (신규 추가)
+        -   TSK-ADM-050-001: 인터넷/TV 상품 기준 정보 생성 (Create)
+        -   TSK-ADM-050-002: 등록된 인터넷/TV 상품 목록 조회 (Read)
+        -   TSK-ADM-050-003: 기존 인터넷/TV 상품 정보 수정 (Update)
+        -   TSK-ADM-050-004: 인터넷/TV 상품 정보 삭제 (Delete)
