--- a/somang_documents/somang_documents/설계/인증및보안설계.md
+++ b/somang_documents/somang_documents/설계/인증및보안설계.md
@@ -77,3 +77,61 @@ sequenceDiagram
     - Supabase URL, `anon` key, `service_role` key 등 민감한 자격 증명은 소스 코드에 절대 하드코딩하지 않습니다.
     - **CI/CD 환경**: **GitHub Actions Secrets**를 사용하여 안전하게 관리합니다.
     - **애플리케이션 환경**: 배포 대상 환경(예: Azure App Service)의 **환경 변수(Environment Variables)**를 통해 애플리케이션에 주입합니다.
+
+### 4. 테이블별 RLS 정책 정의
+
+#### `devices` 테이블
+- **목표**: 최고관리자(`admin`)는 모든 작업을 수행할 수 있고, 그 외 사용자(판매점 포함)는 조회만 가능하다.
+- **정책**:
+    1.  **조회(SELECT) 정책**: 인증된 모든 사용자는 `deleted_at`이 `NULL`인 단말기 정보를 조회할 수 있다.
+    2.  **조작(ALL) 정책**: `admin` 역할을 가진 사용자는 모든 작업(INSERT, UPDATE, DELETE)을 수행할 수 있다.
+
+- **구현 (SQL)**:
+    ```sql
+    -- 1. devices 테이블에 RLS 활성화
+    ALTER TABLE public.devices ENABLE ROW LEVEL SECURITY;
+
+    -- 2. admin 사용자의 모든 권한 허용 정책
+    CREATE POLICY "Admin full access on devices"
+    ON public.devices
+    FOR ALL
+    USING (public.get_my_role() = 'admin')
+    WITH CHECK (public.get_my_role() = 'admin');
+
+    -- 3. 인증된 사용자의 읽기 전용 허용 정책
+    CREATE POLICY "Authenticated users can read devices"
+    ON public.devices
+    FOR SELECT
+    USING (
+      auth.role() = 'authenticated'
+      AND deleted_at IS NULL
+    );
+    ```
+
+#### `internet_products` 테이블 (신규)
+- **목표**: `devices` 테이블과 동일하게, 최고관리자(`admin`)만 모든 작업을 수행하고 다른 사용자는 조회만 가능하다.
+- **정책**:
+    1.  **조회(SELECT) 정책**: 인증된 모든 사용자는 `deleted_at`이 `NULL`인 인터넷 상품 정보를 조회할 수 있다.
+    2.  **조작(ALL) 정책**: `admin` 역할을 가진 사용자는 모든 작업(INSERT, UPDATE, DELETE)을 수행할 수 있다.
+
+- **구현 (SQL)**:
+    ```sql
+    -- 1. internet_products 테이블에 RLS 활성화
+    ALTER TABLE public.internet_products ENABLE ROW LEVEL SECURITY;
+
+    -- 2. admin 사용자의 모든 권한 허용 정책
+    CREATE POLICY "Admin full access on internet_products"
+    ON public.internet_products
+    FOR ALL
+    USING (public.get_my_role() = 'admin')
+    WITH CHECK (public.get_my_role() = 'admin');
+
+    -- 3. 인증된 사용자의 읽기 전용 허용 정책
+    CREATE POLICY "Authenticated users can read internet_products"
+    ON public.internet_products
+    FOR SELECT
+    USING (
+      auth.role() = 'authenticated'
+      AND deleted_at IS NULL
+    );
+    ```
