--- a/somang_documents/somang_documents/설계/테이블명세.md
+++ b/somang_documents/somang_documents/설계/테이블명세.md
@@ -219,7 +219,7 @@
 | `content`    | 답변내용   | `text`        | NOT NULL                        | 답변의 상세 내용.                        |
 | `created_at` | 작성일시   | `timestamptz` | NOT NULL, DEFAULT `now()`       | 답변이 작성된 시각.                      |
 
-### 18. audit_logs (신규 추가)
+### 18. audit_logs
 - **테이블 설명**: 플랫폼의 주요 변경 이력을 기록하는 감사 로그 테이블입니다.
 
 | 컬럼 영문명       | 컬럼 한글명 | 데이터 타입        | 제약 조건                      | 설명                                         |
@@ -231,3 +231,53 @@
 | `old_value`  | 변경 전 값 | `jsonb`       |                                | 변경 전 데이터 상태 (필요시).                      |
 | `new_value`  | 변경 후 값 | `jsonb`       |                                | 변경 후 데이터 상태 (필요시).                      |
 | `created_at` | 발생일시   | `timestamptz` | NOT NULL, DEFAULT `now()`      | 작업이 수행된 시각.                              |
+
+### 19. `devices`
+- **테이블 설명**: 시스템에서 사용되는 휴대폰 단말기의 기준 정보와 상세 제원을 저장합니다.
+
+| 컬럼명 | 한글명 | 데이터 타입 | 제약 조건 | 설명 |
+| :--- | :--- | :--- | :--- | :--- |
+| `id` | 식별자 | `uuid` | PK, NOT NULL, DEFAULT `gen_random_uuid()` | 테이블의 기본 키 |
+| `manufacturer`| 제조사 | `text` | NOT NULL | 제조사 (예: Samsung, Apple) |
+| `device_name`| 기기명 | `text` | NOT NULL | 기기명 (예: Galaxy S24 Ultra) |
+| `device_code`| 기기 코드 | `text` | NOT NULL, UNIQUE | 모델을 식별하기 위한 고유 코드 (예: SM-S928N) |
+| `release_date`| 출시일 | `date` | | 단말기 출시 일자 |
+| `colors` | 지원 색상 | `text[]` | | 지원되는 색상 이름의 배열 (예: `{'Titanium Black', 'Titanium Gray'}`) |
+| `storage_options` | 내장메모리 | `integer[]`| | 지원되는 저장 용량(GB)의 정수 배열 (예: `{256, 512, 1024}`) |
+| `description` | 내용(설명) | `text` | | 단말기에 대한 추가적인 설명 또는 마케팅 문구 |
+| `ram_gb` | RAM | `integer` | | RAM 용량 (GB 단위) |
+| `battery_mah`| 배터리 | `integer` | | 배터리 용량 (mAh 단위) |
+| `screen_size_inch` | 화면크기 | `numeric(3,1)` | | 화면 크기 (인치 단위, 소수점 첫째 자리까지) |
+| `display_spec` | 디스플레이 | `text` | | 디스플레이 상세 사양 (예: 'Dynamic AMOLED 2X (1~120Hz)') |
+| `cpu_spec` | CPU | `text` | | CPU 상세 사양 (예: 'Snapdragon® 8 Gen 3 for Galaxy') |
+| `camera_spec`| 카메라 | `text` | | 카메라 상세 사양 (예: '후면: 200MP 광각...') |
+| `external_memory_support` | 외장메모리 | `text` | | 외장메모리 지원 정보 (예: 'MicroSD (최대 1TB)', '미지원') |
+| `mobile_payment` | 간편결제 | `text` | | 간편결제 지원 정보 (예: 'Samsung Pay') |
+| `water_dust_resistance` | 방수방진 | `text` | | 방수방진 등급 (예: 'IP68') |
+| `fingerprint_sensor` | 지문인식 | `text` | | 지문인식 기술 정보 (예: '온스크린 초음파') |
+| `wireless_charging_supported`| 무선충전 | `boolean` | | 무선충전 지원 여부 |
+| `factory_film_attached`| 필름부착 | `boolean` | | 공장 출고 시 보호필름 부착 여부 |
+| `created_at` | 생성일시 | `timestamptz`| NOT NULL, DEFAULT `now()` | 레코드 생성 시각 |
+| `updated_at` | 수정일시 | `timestamptz`| NOT NULL, DEFAULT `now()` | 레코드 마지막 수정 시각 |
+| `deleted_at` | 삭제일시 | `timestamptz`| | 소프트 삭제 시각 (NULL이 아니면 삭제된 것으로 간주) |
+
+### 20. `internet_products` (신규)
+- **테이블 설명**: 관리자가 등록하는 인터넷/TV 결합 상품의 기준 정보를 저장합니다.
+
+| 컬럼명 | 한글명 | 데이터 타입 | 제약 조건 | 설명 |
+| :--- | :--- | :--- | :--- | :--- |
+| `id` | 식별자 | `uuid` | PK, NOT NULL, DEFAULT `gen_random_uuid()` | 테이블의 기본 키 |
+| `product_name` | 상품명 | `text` | NOT NULL | 상품의 전체 이름 (예: KT 스페셜 500M + TV 베이직) |
+| `carrier` | 통신사 | `text` | NOT NULL | 상품을 제공하는 통신사 (예: KT, SK, LGU+) |
+| `product_type` | 상품 구성 | `text` | NOT NULL, CHECK | 'internet_only' 또는 'internet_tv' 중 하나 |
+| `internet_speed_mbps` | 인터넷 속도 | `integer` | NOT NULL | 인터넷 속도 (Mbps 단위) |
+| `tv_channel_count` | TV 채널 수 | `integer` | | TV 채널 개수 (상품 구성이 'internet_tv'일 경우) |
+| `regular_price` | 정가 | `integer` | NOT NULL | 월 정가 (원 단위) |
+| `discounted_price` | 할인가 | `integer` | NOT NULL | 월 할인가 (원 단위) |
+| `contract_period_months`| 약정 | `integer` | NOT NULL | 의무 약정 기간 (개월 단위) |
+| `installation_fee_weekday` | 설치비(주중)| `integer` | NOT NULL | 주중 방문 설치비 (원 단위) |
+| `installation_fee_weekend`| 설치비(주말)| `integer` | NOT NULL | 주말 방문 설치비 (원 단위) |
+| `description` | 내용(설명) | `text` | | 상품에 대한 추가적인 설명 |
+| `created_at` | 생성일시 | `timestamptz`| NOT NULL, DEFAULT `now()` | 레코드 생성 시각 |
+| `updated_at` | 수정일시 | `timestamptz`| NOT NULL, DEFAULT `now()` | 레코드 마지막 수정 시각 |
+| `deleted_at` | 삭제일시 | `timestamptz`| | 소프트 삭제 시각 (NULL이 아니면 삭제된 것으로 간주) |
