--- a/somang_documents/somang_documents/설계/테이블명세.md
+++ b/somang_documents/somang_documents/설계/테이블명세.md
@@ -11,10 +11,11 @@
 | :------------- | :----- | :------------ | :------------------------ | :-------------------------------------------------------------------------- |
 | `id`           | 사용자 ID | `uuid`        | PK, FK (auth.users.id)    | 사용자 고유 ID. `auth.users` 테이블의 ID를 참조하며, 삭제 시 연쇄적으로 삭제(ON DELETE CASCADE)됩니다. |
 | `role`         | 역할     | `text`        | NOT NULL, CHECK           | 사용자의 역할 ('user', 'owner', 'admin' 중 하나).                                    |
-| `name`         | 이름/닉네임 | `text`        | NOT NULL                  | 사용자가 앱 내에서 사용할 표시 이름 또는 닉네임.                                                |
+| `name`         | 이름     | `text`        | NOT NULL                  | 사용자가 앱 내에서 사용할 표시 이름 또는 닉네임.                                                |
 | `phone_number` | 연락처    | `text`        |                           | 사용자의 연락처. 특히 사업주(owner)의 경우 필수적으로 사용될 수 있습니다.                               |
 | `created_at`   | 생성일시   | `timestamptz` | NOT NULL, DEFAULT `now()` | 프로필 레코드가 생성된 시각.                                                            |
 | `deleted_at`   | 삭제일시   | `timestamptz` |                           | 프로필이 소프트 삭제된 시각. `null`이 아니면 삭제된 계정으로 간주합니다.                                |
+| nick_name      | 닉네임    | text          |                           | 사용자 닉네임                                                                     |
 
 ### 2. user_settings
 - **테이블 설명**: 사용자별 알림 등 개인화된 설정을 관리합니다.
